admin/dist/_build/_log
### Starting build.
# Target: test.ml.depends, tags: { extension:ml, file:test.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules test.ml > test.ml.depends
# Target: test.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:test.cmo, file:test.ml, implem, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o test.cmo test.ml
+ /usr/bin/ocamlc.opt -c -o test.cmo test.ml
File "test.ml", line 7, characters 7-12:
7 | phone: phone;
           ^^^^^
Error: Unbound type constructor phone
Command exited with code 2.
# Compilation unsuccessful.
